# csharp-experiments

./: .gitignore  LICENSE  README.md
bson-exports/: bson-export-c-check.c  bson-export.h
bson-exports-in-xamarin/bson-c-xamarin/: bson-c-xamarin.sln
bson-exports-in-xamarin/bson-c-xamarin/bson-c-xamarin/: App.xaml  App.xaml.cs  BsonExports.cs  MainPage.xaml  MainPage.xaml.cs
bson-exports-in-xamarin/bson-c-xamarin/bson-c-xamarin.Android/: MainActivity.cs  bson-c-xamarin.Android.csproj
bson-exports-in-xamarin/bson-c-xamarin/bson-c-xamarin.Android/Properties/: AndroidManifest.xml  AssemblyInfo.cs
bson-exports-in-xamarin/bson-c-xamarin/bson-c-xamarin.Android/Resources/: Resource.designer.cs
bson-exports-in-xamarin/bson-c-xamarin/bson-c-xamarin.Android/libs/arm64-v8a/: libbson-1.0.so.0
bson-exports-in-xamarin/bson-c-xamarin/bson-c-xamarin.Android/libs/armeabi-v7a/: libbson-1.0.so.0
bson-exports-in-xamarin/bson-c-xamarin/bson-c-xamarin.Android/libs/x86/: libbson-1.0.so.0
bson-exports-in-xamarin/bson-c-xamarin/bson-c-xamarin.Android/libs/x86_64/: libbson-1.0.so.0
bson-exports-in-xamarin/bson-exports/: CMakeLists.txt  bson-export.cpp  bson-export.h
